baru slicing sampe home activity dan implementasi splashscreen activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#14153D</color>
+    <color name="colorPink">#FF2667</color>
+    <color name="colorBlueGrey">#292A50</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
